--- a/Donations/Views/Requests/Index.cshtml
+++ b/Donations/Views/Requests/Index.cshtml
@@ -29,12 +29,24 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-8 mx-auto">
+        <div class="text-center col-12 col-lg-8 mx-auto">
             @if (!Model.UserHasApplied)
             {
-                <form method="post" action="/Requests/@Model.Request.Id/Apply">
-                    <button type="submit" class="btn btn-danger btn-lg">Apply</button>
-                </form>
+                @if (Model.CanDonate)
+                {
+                    <form method="post" action="/Requests/@Model.Request.Id/Apply">
+                        <button type="submit" class="btn btn-danger btn-lg">Apply</button>
+                    </form>
+                }
+                else
+                {
+                    <button type="button" class="btn btn-danger btn-lg" disabled>
+                        Apply
+                    </button>
+                    <small class="d-block text-muted mt-2">
+                        <i class="fas fa-circle-exclamation"></i> @Model.IneligibilityReason
+                    </small>
+                }
             }
             else
             {
