add copyright notice

--- a/Donations/Views/Home/Index.cshtml
+++ b/Donations/Views/Home/Index.cshtml
@@ -4,17 +4,20 @@
 @if (User.Identity?.IsAuthenticated == true)
 {
     <div class="text-center d-flex flex-column align-items-center">
-        <h1>Welcome @User.Identity?.Name!</h1>
-    </div>
+    <h1>Welcome @User.Identity?.Name!</h1>
+</div>
 }
 else
 {
     <div class="text-center d-flex flex-column align-items-center">
-        <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
+    <img src="~/img/logo.png" alt="Logo" class="mb-4" style="max-width: 300px;">
 
-        <div class="d-flex justify-content-evenly w-100" style="max-width: 400px;">
-            <a href="/Login?loginType=Donor" class="btn btn-danger px-4">User</a>
-            <a href="/Login?loginType=DonationCenter" class="btn btn-danger px-4">Hospital</a>
-        </div>
+    <div class="d-flex justify-content-evenly w-100" style="max-width: 400px;">
+        <a href="/Login?loginType=Donor" class="btn btn-danger px-4">User</a>
+        <a href="/Login?loginType=DonationCenter" class="btn btn-danger px-4">Hospital</a>
     </div>
+</div>
+    <footer class="text-center mt-auto">
+    <p>&copy; 2025 Batata. All rights reserved.</p>
+</footer>
 }
