add a required consent checkbox to the register context

--- a/Donations/Views/Register/Index.cshtml
+++ b/Donations/Views/Register/Index.cshtml
@@ -47,6 +47,17 @@
             </div>
         </div>
 
+        <div class="mb-3">
+            <label for="consentToTracking" class="form-label">Consent to tracking</label>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="consentToTracking" name="Consent" required>
+                <label for="consentToTracking" class="form-check-label">I consent to my blood type and donation history
+                    being tracked. I also confirm that to my knowledge I suffer from no chronic or acute conditions that
+                    would impair my eligibility as a blood donor, and I am aware of potential criminal liability in the
+                    case this is not true.</label>
+            </div>
+        </div>
+
         <div class="form-group mb-3 text-start">
             <label for="location" class="form-label">Location</label>
             <select class="form-control" id="location" name="LocationId" required>
